# ybryx-robo-financial

./: PHASE_2_SELF_AUDIT.md  PHASE_3_FINAL_AUDIT.md  README.md  SALES_AGENT_AUDIT_REPORT.md  SUPABASE_SCHEMA_DEPLOYMENT.md  docker-compose.yml
.claude/: settings.local.json
.cursor/plans/: EOD_Nov_10.md  agent-position-outline-caf37e1c.plan.md  e-69cabf9c.plan.md  yb-ff2fe05f.plan.md
app/: layout.tsx  page.tsx
app/prequalify/: page.tsx
app/robots/: page.tsx
app/thank-you/: page.tsx
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  supabase_schema.sql  supabase_schema_deploy.sql
backend/alembic/: README  env.py
backend/app/: __init__.py  config.py  deps.py  main.py
backend/app/contracts/: README.md  dealer_matching.json  financing_specialist.json  knowledge_specialist.json  level1_sales_alex.json  level2_equipment_morgan.json  supervisor.json
backend/app/database/: models.py  session.py
backend/app/examples/: __init__.py  memory_retriever_example.py
backend/app/graph/: __init__.py  agents.py  state.py  supervisor.py
backend/app/graph/nodes/: __init__.py  context_loader_node.py  memory_writer_node.py
backend/app/memory/: manager.py  unified_manager.py
backend/app/models/: __init__.py  agent_contract.py
backend/app/routers/: chat.py  dealers.py  prequalifications.py  robots.py
backend/app/schemas/: prequalification.py
backend/app/tools/: __init__.py  dealer.py  financial.py  notification.py  robot.py
backend/tests/: conftest.py  test_main.py
components/: Footer.tsx  Header.tsx  ProgressStepper.tsx
docs/: AGENT_POSITION_OUTLINE.md  API_CONTRACTS.md  CLEANUP_SUMMARY.md  DEPENDENCY_AUDIT_REPORT.md  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  MEMORY_SYSTEM.md  MODEL_USAGE_AUDIT.md  PHASE_1_SELF_AUDIT.md  SALES_AGENT_AUDIT_REPORT.md  SUPABASE_CLI_INTEGRATION.md  UNIFIED_MEMORY_IMPLEMENTATION.md  UNIFIED_MEMORY_README.md
docs/Dev_Standard/: AGENT_CREATION_STANDARD.md  AGENT_JSONCONTRACT1st_IDENTITY-RESPONSE_STNDRD.md  AGENT_ORCHESTRATION_STANDARD.md  INFRASTRUCTURE_MEMORY_STANDARD.md  LLM_CONFIGURATION_STANDARD.md  MEMORY_MANAGEMENT_STANDARD.md  READ ONLY AGENT SUPERVISOR AGENT EXAMPLE.md  READ_ONLY_SUB_AGENT_EXAMPLE.md
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
supabase/: config.toml
tests/: test_chat.json  test_chat2.json  test_chat3.json  test_database_queries.py
(+10 files in other folders)
